--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <spark.version>2.1.1</spark.version>
+        <!--<spark.sql.version>2.4.5</spark.sql.version>-->
+        <spark.sql.version>2.1.1</spark.sql.version>
     </properties>
 
     <dependencies>
@@ -27,6 +29,11 @@
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-core_2.11</artifactId>
             <version>${spark.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-sql_2.11</artifactId>
+            <version>${spark.sql.version}</version>
         </dependency>
     </dependencies>
 
