--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,8 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <spark.version>2.1.1</spark.version>
-        <!--<spark.sql.version>2.4.5</spark.sql.version>-->
         <spark.sql.version>2.1.1</spark.sql.version>
+        <mysql.version>5.1.27</mysql.version>
     </properties>
 
     <dependencies>
@@ -34,6 +34,11 @@
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-sql_2.11</artifactId>
             <version>${spark.sql.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql.version}</version>
         </dependency>
     </dependencies>
 
