--- a/pom.xml
+++ b/pom.xml
@@ -22,24 +22,41 @@
         <spark.version>2.1.1</spark.version>
         <spark.sql.version>2.1.1</spark.sql.version>
         <mysql.version>5.1.27</mysql.version>
+        <spark.hive.version>2.1.1</spark.hive.version>
+        <hive.version>1.2.1</hive.version>
     </properties>
 
     <dependencies>
+        <!--spark rdd必须模块,spark-core-->
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-core_2.11</artifactId>
             <version>${spark.version}</version>
         </dependency>
+        <!--spark sql支持模块-->
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-sql_2.11</artifactId>
             <version>${spark.sql.version}</version>
         </dependency>
+        <!--spark连接MySQL驱动-->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql.version}</version>
         </dependency>
+        <!--spark中对Hive提供支持-->
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-hive_2.11</artifactId>
+            <version>${spark.hive.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hive</groupId>
+            <artifactId>hive-exec</artifactId>
+            <version>${hive.version}</version>
+        </dependency>
+
     </dependencies>
 
 
