--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <module>spark_core</module>
         <module>spark_sql</module>
         <module>spark_streaming</module>
+        <module>offline_data_warehose</module>
+        <module>recommend</module>
     </modules>
 
     <properties>
