--- a/spark_streaming/pom.xml
+++ b/spark_streaming/pom.xml
@@ -16,4 +16,11 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-streaming_2.11</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
