--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
         <mysql.version>5.1.27</mysql.version>
         <spark.hive.version>2.1.1</spark.hive.version>
         <hive.version>1.2.2</hive.version>
-        <spark.streaming.version>2.1.1</spark.streaming.version>
+        <!--<spark.streaming.version>2.1.1</spark.streaming.version>-->
     </properties>
 
     <dependencies>
@@ -59,12 +59,14 @@
             <artifactId>hive-exec</artifactId>
             <version>${hive.version}</version>
         </dependency>
-        <!--spark streaming模块-->
-        <dependency>
-            <groupId>org.apache.spark</groupId>
-            <artifactId>spark-streaming_2.11</artifactId>
-            <version>${spark.streaming.version}</version>
-        </dependency>
+
+
+        <!--spark streaming kafka 0.8版本-->
+        <!--<dependency>-->
+        <!--    <groupId>org.apache.spark</groupId>-->
+        <!--    <artifactId>spark-streaming-kafka-0-8_2.11</artifactId>-->
+        <!--    <version>2.1.1</version>-->
+        <!--</dependency>-->
 
     </dependencies>
 
