--- a/spark_streaming/pom.xml
+++ b/spark_streaming/pom.xml
@@ -17,9 +17,16 @@
     </properties>
 
     <dependencies>
+        <!--spark streaming模块-->
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-streaming_2.11</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-streaming-kafka-0-8_2.11</artifactId>
+            <version>2.1.1</version>
         </dependency>
     </dependencies>
 
